# prism

./: .gitignore  CMakeLists.txt  README.md  click.cpp  config.yaml  main.cpp  main.py  matrix.cpp  plot.py  prism.py  spad  xgrid.cpp  xtalk.cpp
include/prism/: config.hpp  matrix.hpp  random.hpp  simulation.hpp  solver.hpp  utils.hpp  xtalk.hpp
old/: prism.py  simulator_complete.py  simulator_functions.py  xtalk.py  xtalk_matrix_test.py  xtalk_verbose.cpp
old/cpp/: config.yaml  makefile
src/: config.cpp  matrix.cpp  random.cpp  simulation.cpp  solver.cpp  utils.cpp  xtalk.cpp
